# backend/rentigo-backend/src/main/java/cc/martincao/rentigo/rentigobackend/rental/dto/RentalRequestDTO.java
@@ -1,0 +1,17 @@
+package cc.martincao.rentigo.rentigobackend.rental.dto;
+
+import com.fasterxml.jackson.annotation.JsonFormat;
+import lombok.Data;
+
+import java.util.Date;
+
+@Data
+public class RentalRequestDTO {
+    private Long vehicleId;
+    
+    @JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'", timezone = "UTC")
+    private Date startTime;
+    
+    @JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'", timezone = "UTC")
+    private Date endTime;
+}
