# backend/rentigo-backend/src/main/java/cc/martincao/rentigo/rentigobackend/vehicle/model/Location.java
@@ -1,0 +1,56 @@
+package cc.martincao.rentigo.rentigobackend.vehicle.model;
+
+import jakarta.persistence.*;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.UpdateTimestamp;
+
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
+
+@Data
+@NoArgsConstructor
+@Entity
+@Table(name = "location")
+public class Location {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Short id;
+
+    @Column(nullable = false)
+    private String city;
+
+    @Column(name = "center_name", nullable = false)
+    private String centerName;
+
+    @Column(nullable = false)
+    private String address;
+
+    @Column(precision = 10, scale = 7)
+    private BigDecimal lng;
+
+    @Column(precision = 10, scale = 7)
+    private BigDecimal lat;
+
+    @Column(name = "contact_phone", length = 32)
+    private String contactPhone;
+
+    @Column(name = "business_hours", length = 100)
+    private String businessHours;
+
+    @CreationTimestamp
+    @Column(name = "created_at", nullable = false, updatable = false)
+    private LocalDateTime createdAt;
+
+    @UpdateTimestamp
+    @Column(name = "updated_at", nullable = false)
+    private LocalDateTime updatedAt;
+
+    @Column(name = "reserved_field1")
+    private String reservedField1;
+
+    @Column(name = "reserved_field2")
+    private String reservedField2;
+}
