# backend/rentigo-backend/src/main/java/cc/martincao/rentigo/rentigobackend/vehicle/model/VehicleStatus.java
@@ -1,0 +1,7 @@
+package cc.martincao.rentigo.rentigobackend.vehicle.model;
+
+public enum VehicleStatus {
+    AVAILABLE,
+    RENTED,
+    MAINTENANCE
+}
